objects/SendMail__e.object
<CustomObject>
    <fields>
        <fullName>BN__c</fullName>
        <label>BN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Recipient_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Recipient_Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Id__c</fullName>
        <label>Mail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Type__c</fullName>
        <description>The Type of Mail which should  be sent</description>
        <label>Mail_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>The related Object to which the mail refers</description>
        <label>ObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Adress__c</fullName>
        <label>Recipient_Adress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>SendMailEvent to decouple VH24MailManager</description>
    <label>SendMail</label>
    <pluralLabel>SendMails</pluralLabel>
</CustomObject>